# CS213-A2

./: .gitignore  README.md  Test.txt  problem10LookUPTable.txt
A2_S21_20220239_20220470_20220133/A2_Task2_S21_20220239_20220470_20220133/: A2_Task2_S21_20220239_20220470_20220133.cpp  BigReal.h  BigReal.sln  BigReal.vcxproj  CMakeLists.txt  Source.cpp  Tests.txt
BigReal/: BigReal.cpp  BigReal.h  BigReal.vcxproj  BigReal.vcxproj.filters  Source.cpp  tsts.txt
Sheet Solution/: A2_S21_20220239_Problem11.cpp  A2_S21_20220239_Problem2.cpp  A2_S21_20220470_Problem12.cpp  A2_S21_20220470_Problem6.cpp  A2_S21_20220470_Problem9.cpp
Sheet[1] Solution/: A2_S21_20220133_Problem1.cpp  A2_S21_20220133_Problem10.cpp  A2_S21_20220133_Problem4.cpp  A2_S21_20220239_Problem11.cpp  A2_S21_20220239_Problem8.cpp  A2_S21_20220470_Problem 6.cpp  A2_S21_20220470_Problem12.cpp  A2_S21_20220470_Problem3.cpp  A2_S21_20220470_Problem6.cpp  A2_S21_20220470_Problem9.cpp
Solutions for problem sheet 1/: 2.cpp  A2_S21_20220133_Problem10.cpp  A2_S21_20220239_Problem2.cpp  A2_S21_20220239_Problem5.cpp  A2_S21_20220239_Problem8.cpp  problem1.cpp  problem10.cpp  problem10LookUPTable.txt  problem10Post.txt  problem11.cpp  problem2.cpp  problem4.cpp  problem5.cpp  problem7.cpp  problem8.cpp
Vole Machine/: Byte.h  IR.h  (+3 more)
Vole Machine Simulator/: Case B.txt  ClassDiagram.cd  Counter.cpp  Counter.h  IR.cpp  IR.h  Instruction.cpp  Instruction.h  Machine.cpp  Machine.h  Ramly.txt  Test.txt  Test2.txt  Vole Machine.aps  Vole Machine.rc  Vole Machine.vcxproj  Vole Machine.vcxproj.filters  resource.h
(+70 files in other folders)
